--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "clonotodo-renderer",
   "version": "1.0.0",
-  "type": "module",
+  "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "postinstall": "npx puppeteer browsers install chrome"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "puppeteer": "^22.7.1"
+    "express": "^4.18.2",
+    "puppeteer": "^22.6.2"
   }
 }
