--- a/package.json
+++ b/package.json
@@ -1,13 +1,21 @@
 {
   "name": "clonotodo-renderer",
   "version": "1.0.0",
+  "description": "Servicio de renderizado con Puppeteer para Render",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
-    "postinstall": "npx puppeteer browsers install chrome"
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^22.6.2"
+    "express": "^4.19.2",
+    "puppeteer": "^22.15.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  },
+  "engines": {
+    "node": ">=18 <23"
   }
 }
